First css of the day.

--- a/public/style.css
+++ b/public/style.css
@@ -42,3 +42,13 @@
         font-weight: bold;
     
 }
+
+.button {
+    display: block;
+    background: grey;
+    border: 1px solid black;
+    padding: 2px;
+    text-decoration: none;
+    color: black;
+}
+
